--- a/src/styles.css
+++ b/src/styles.css
@@ -117,7 +117,7 @@ h1 {
     padding: 50px 50px 50px 0px;
     width: 100%;
     margin: 0 auto;
-    flex-wrap:nowrap;
+    flex-wrap:wrap;
 }
 .int {
     margin: 15px;
