--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,381 @@
+html {
+    font-size: 16px;
+}
+
+body {
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    font-family: 'Montserrat', sans-serif;
+    overflow-x: hidden;
+    object-fit: cover;
+}
+
+#header img {
+    width: 100%;
+    object-fit: cover;
+    height: 360px;
+    position: relative;
+}
+
+#overimage {
+    margin: 0px auto;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    margin-top: -120px;
+}
+
+#over-text {
+    font-size: 24px;
+    color: white;
+    font-weight: 500;
+    padding-left: 12px;
+}
+
+#over-explore a {
+    font-size: 16px;
+    border: 0px solid auto;
+    background-color: rgba(85, 83, 83, 0.171);
+    color: white;
+    letter-spacing: 2px;
+    padding: 12px 12px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 5px;
+    font-weight: 500;
+}
+
+#over-explore a:hover {
+    background-color: rgba(0, 0, 0);
+    border: 1px solid white;
+    font-weight: 600;
+    letter-spacing: 2px;
+}
+
+#navbar {
+    display: none;
+}
+
+#altnavbar {
+    margin: 0 auto;
+    height: 32px;
+    padding: 12px 12px;
+    display: block;
+    font-weight: 500;
+    width: 100%;
+    gap: 36px;
+}
+
+#menu {
+    font-size: 14px;
+    width: 100%;
+    text-align: left;
+    position: relative;
+    margin-top: 8px;
+    align-items: center;
+}
+
+#menu:hover {
+    background-color: rgba(169, 169, 169, 0.321);
+}
+
+#althead {
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+    position: absolute;
+    margin-top: -29px;
+}
+
+.explore {
+    background-color: black;
+    color: white;
+    font-weight: 500;
+    border: 2px solid auto;
+    padding: 10px 20px;
+    padding-left: 15px;
+    text-align: left;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 2px;
+}
+
+a:hover {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+    text-decoration: none;
+}
+
+a {
+    margin-bottom: 20px;
+    margin-top: 10px;
+    text-decoration: none;
+}
+
+.byo {
+    background-color: auto;
+    color: black;
+    text-decoration: none;
+    font-size: 16px;
+    line-height: 12px;
+}
+
+#initial {
+    padding: 48px 24px 48px 24px;
+    height: 400px;
+    gap: 4px;
+    display: flex;
+    flex-direction: row;
+    background-color: rgb(237, 239, 240);
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+#initial img {
+    height: 200px;
+}
+
+.name1 {
+    padding: 16px 0px;
+    color: black;
+    font-size: 18px;
+    font-weight: 600;
+    letter-spacing: 1px;
+}
+
+.details {
+    color: gray;
+    font-size: 14px;
+    padding-bottom: 24px;
+}
+
+#defocta {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    text-align: center;
+    width: 100%;
+    max-width: 420px;
+}
+
+.maindetails1 {
+    text-align: left;
+    margin: 0 auto;
+    margin-left: 24px;
+
+}
+
+.main-img img {
+    height: 260px;
+    text-align: center;
+    padding-top: 32px;
+
+}
+
+.mainname {
+    font-size: 24px;
+    margin: 24px 0px;
+    font-weight: 600;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.det {
+    font-size: medium;
+    color: gray;
+    margin-bottom: 56px;
+}
+
+#def130 {
+    display: flex;
+    flex-direction: column-reverse;
+    margin: 0 auto;
+    text-align: center;
+    width: 100%;
+    max-width: 420px;
+}
+
+.wrapper{
+    background-color: rgb(237, 239, 240);
+    max-width: 1440px;
+}
+
+.maindetails2 {
+    text-align: left;
+    margin: 0 auto;
+    margin-left: 24px;
+
+
+}
+
+#def110 {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    text-align: center;
+    width: 100%;
+    max-width: 420px;
+}
+
+#def90 {
+    display: flex;
+    flex-direction: column-reverse;
+    margin: 0 auto;
+    text-align: center;
+    width: 100%;
+    max-width: 420px;
+}
+table{
+    display: none;
+}
+.btdn{
+    text-align: center;
+    border: 5px solid black;
+    border-radius: 48px;
+    margin: 24px auto;
+    background-color: rgba(198, 191, 191, 0.923);
+}
+#Book-test-drive {
+    max-width: 600px;
+    margin: 0px auto;
+}
+
+#detail-form {
+    font-weight: 500;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+    text-align: left;
+}
+
+#detail-form input {
+    padding: 8px;
+    font-size: 14px;
+    margin-bottom:12px ;
+    border-radius: 5px;
+    border: 1px solid gray;
+}
+
+.form-group input[type="checkbox"] {
+    height: 20px;
+    width: 20px;
+}
+
+.form-group input[type="submit"] {
+    color: white;
+    background-color: black;
+    height: 50px;
+    width: 100px;
+    cursor: pointer;
+}
+#PI {
+    padding: 24px 8px;
+    margin: 0 auto;
+    width: 100%;
+}
+
+#PI input {
+    width: 85%;
+    margin-top: 8px;
+}
+
+#TD {
+    font-size: 18px;
+    padding: 24px 8px;
+    text-align: left;
+    font-weight: 500;
+}
+
+
+#PR {
+    font-size: 18px;
+    padding: 24px 8px;
+    text-align: left;
+    font-weight: 500;
+}
+#PR input {
+    width: 85%;
+    margin-top: 12px;
+    border-radius: 4px;
+    border: 1px solid gray;
+    height: 24px;
+}
+#consent {
+     font-size: 18px;
+    padding: 24px 8px;
+    text-align: left;
+    font-weight: 500;
+}
+
+#OE {
+    font-size: 18px;
+    padding: 24px 8px;
+    text-align: left;
+    font-weight: 500;
+}
+
+#OE textarea {
+    margin-top: 12px;
+    width: 85%;
+    font-size: 14px;
+
+}
+
+.ch {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 10px;
+    margin-right: auto;
+}
+#book{
+    text-align: center;
+    margin: 0 auto;
+    font-size: 24px;
+    width: 80%;
+    border-radius: 20px;
+}
+#book-holder{
+    margin: 24px auto;
+    text-align: center;
+}
+#footer {
+    padding: 12px;
+    text-align: center;
+    background-color: rgba(192, 192, 192, 0.17);
+}
+
+#footer-links {
+    text-decoration: none;
+    list-style: none;
+}
+
+#footer-links li {
+    display: flex;
+    flex-direction: column;
+    margin: 0px 50px;
+}
+
+#footer-links a {
+    color: black;
+    font-size: large;
+    text-align: center;
+    border-radius: 5px;
+}
+
+
+
+
+
+
+
+
+
+
+
+/*
 body {
     margin: 0;
     padding: 0;
@@ -14,23 +392,22 @@ body {
     position: relative;
 }
 
-h1 {
-    text-align: center;
-}
-#overimage{
+#overimage {
     margin: 0px auto;
     width: 100%;
     text-align: center;
     position: absolute;
     margin-top: -172px;
 }
-#over-text{
+
+#over-text {
     font-size: 48px;
     color: white;
     font-weight: 600;
     padding-left: 12px;
 }
-#over-explore a{
+
+#over-explore a {
     font-size: 24px;
     border: 0px solid auto;
     background-color: rgba(0, 0, 0, 0.241);
@@ -44,7 +421,8 @@ h1 {
     border-radius: 5px;
     font-weight: 500;
 }
-#over-explore a:hover{
+
+#over-explore a:hover {
     background-color: rgba(0, 0, 0);
     border: 1px solid white;
     font-weight: 600;
@@ -111,17 +489,18 @@ h1 {
 }
 
 #initial {
-    height: 500px;
+    height: 600px;
     display: flex;
     background-color: rgb(237, 239, 240);
-    padding: 50px 50px 50px 0px;
     width: 100%;
-    margin: 0 auto;
-    flex-wrap:wrap;
+    margin: 0px auto;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-shrink: 0;
 }
+
 .int {
-    margin: 15px;
-    padding-right:48px;
     width: 20%;
 }
 
@@ -148,9 +527,11 @@ h1 {
     padding: 225px 50px 225px 75px;
     width: 40%;
 }
-.main-img{
+
+.main-img {
     width: 60%;
 }
+
 .mainname {
     font-size: 48px;
     margin-bottom: 16px;
@@ -213,14 +594,14 @@ h1 {
     letter-spacing: 2px;
 }
 
-a:hover{
+a:hover {
     background-color: white;
     color: black;
     border: 1px solid black;
     text-decoration: none;
 }
 
-a{
+a {
     margin-bottom: 20px;
     margin-top: 10px;
     text-decoration: none;
@@ -231,7 +612,7 @@ a{
     color: black;
     text-decoration: none;
     font-size: 16px;
-    line-height:12px ;
+    line-height: 12px;
 }
 
 #footer {
@@ -347,7 +728,7 @@ a{
     font-weight: 500;
     font-family: 'Montserrat', sans-serif;
     font-size: 24px;
-    
+
 }
 
 #detail-form input {
@@ -357,11 +738,13 @@ a{
     border-radius: 5px;
     border: 1px solid gray;
 }
-.form-group input[type="checkbox"]{ 
+
+.form-group input[type="checkbox"] {
     height: 20px;
     width: 20px;
 }
-.form-group input[type="submit"]{
+
+.form-group input[type="submit"] {
     color: white;
     background-color: black;
     margin-left: 700px;
@@ -374,7 +757,8 @@ a{
     background-color: rgba(105, 105, 105, 0.17);
     padding: 20px 0px 20px 400px;
 }
-#PI input{
+
+#PI input {
     width: 30%;
 }
 
@@ -387,16 +771,19 @@ a{
     padding: 20px 0px 20px 400px;
     background-color: rgba(105, 105, 105, 0.17);
 }
-#consent{
-        padding: 20px 0px 20px 400px;
-        
+
+#consent {
+    padding: 20px 0px 20px 400px;
+
 }
-#OE{
+
+#OE {
     padding: 20px 0px 20px 400px;
     background-color: rgba(105, 105, 105, 0.17);
 }
-#OE textarea{
-    margin-top: 12px; 
+
+#OE textarea {
+    margin-top: 12px;
     width: 50%;
     font-size: 16px;
 
@@ -408,6 +795,8 @@ a{
     line-height: 30px;
     margin-right: 100px;
 }
-#D130{
+
+#D130 {
     margin-left: 21px;
 }
+*/
